outputdir/objects/Product__c.object
<CustomObject>
    <label>Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Added_Date__c</fullName>
        <label>Added Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Check_Release_Date</fullName>
        <active>true</active>
        <errorConditionFormula>DATEVALUE(Release_Date__c ) &gt; TODAY ()</errorConditionFormula>
        <errorDisplayField>Added_Date__c</errorDisplayField>
        <errorMessage>Field Release Date must not be later then today</errorMessage>
    </validationRules>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>